v3 - extend divider mixin and reuse

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -25,7 +25,7 @@
 @import "mixins/cards";
 @import "mixins/forms";
 @import "mixins/lists";
-@import "mixins/nav-divider";
+@import "mixins/divider";
 @import "mixins/pagination";
 @import "mixins/progress";
 @import "mixins/tables";
