--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -171,7 +171,7 @@
         .input-group-#{$size} > .form-control,
         .input-group-#{$size} > .input-group-addon,
         .input-group-#{$size} > .input-group-btn > .btn {
-            @extend .form-control-#{$size};
+            @extend %form-control-#{$size};
         }
         .input-group-#{$size} > .input-group-addon,
         .input-group-#{$size} > .input-group-btn > .btn {
