fix sass syntax errors

--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -7,7 +7,7 @@
     @if $enable-flex-full {
         display: flex;
         flex-direction: column;
-    } else {
+    } @else {
         display: block;
     }
 }
