--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -36,7 +36,7 @@
         opacity: $btn-disabled-opacity;
         @if $enable-focus-ring {
             box-shadow: none;
-        } else {
+        } @else {
             outline: 0;
         }
     }
