v3 - Inline forms: add flexbox support

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -517,6 +517,7 @@ $form-check-margin-bottom:      1rem !default;
 $form-check-sibling-margin-top: -.5rem !default;
 $form-check-input-gutter:       1.25rem !default;
 $form-check-input-margin-y:     .3125rem !default;
+$form-check-input-margin-x:     .25rem !default;
 $form-check-inline-margin-x:    .75rem !default;
 $form-check-disabled-color:     $disabled-color !default;
 
