--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -289,17 +289,48 @@ textarea.form-control {
 // default HTML form controls and our custom form controls (e.g., input groups).
 .form-inline {
 
+    @if $enable-flex-full {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center; // Prevent shorter elements from growing to same height as others (e.g., small buttons growing to normal sized button height)
+
+        // Because we use flex, the initial sizing of checkboxes is collapsed and
+        // doesn't occupy the full-width (which is what we want for xs grid tier),
+        // so we force that here.
+        .form-check {
+            width: 100%;
+        }
+    }
+
     // Kick in the inline
     @include media-breakpoint-up(#{$form-inline-breakpoint}) {
+        label {
+            @if $enable-flex-full {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            margin-bottom: 0;
+        }
+
+
         // Inline-block all the things for "inline"
         .form-group {
-            display: inline-block;
             margin-bottom: 0;
-            vertical-align: middle;
+
+            @if $enable-flex-full {
+                display: flex;
+                flex: 0 0 auto;
+                flex-flow: row wrap;
+            } @else {
+                display: inline-block;
+                vertical-align: middle;
+            }
         }
 
         // Allow folks to *not* use `.form-group`
-        .form-control {
+        .form-control,
+        .custom-select {
             display: inline-block;
             width: auto; // Prevent labels from stacking above inputs in `.form-group`
             vertical-align: middle;
@@ -311,20 +342,28 @@ textarea.form-control {
         }
 
         .input-group {
-            display: inline-table;
             width: auto;
-            vertical-align: middle;
 
-            .input-group-addon,
-            .input-group-btn,
-            .form-control {
-                width: auto;
+            @if not $enable-flex-full {
+                &:not(.input-group-flex) {
+                    display: inline-table;
+                    vertical-align: middle;
+                }
+
+                .input-group-addon,
+                .input-group-btn,
+                .form-control
+                .custom-select {
+                    width: auto;
+                }
             }
         }
 
         // Input groups need that 100% width though
         .input-group > .form-control {
-            width: 100%;
+            @if not $enable-flex-full {
+                width: 100%;
+            }
         }
 
         .form-control-label {
@@ -335,10 +374,17 @@ textarea.form-control {
         // Remove default margin on radios/checkboxes that were used for stacking, and
         // then undo the floating of radios and checkboxes to match.
         .form-check {
-            display: inline-block;
             margin-top: 0;
             margin-bottom: 0;
-            vertical-align: middle;
+
+            @if $enable-flex-full {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            } @else {
+                display: inline-block;
+                vertical-align: middle;
+            }
         }
 
         .form-check-label {
@@ -348,11 +394,93 @@ textarea.form-control {
         .form-check-input {
             position: relative;
             margin-left: 0;
+
+            @if $enable-flex-full {
+                margin-top: 0;
+                margin-right: $form-check-input-margin-x;
+            }
+        }
+
+        // Custom form controls
+        .custom-control {
+            padding-left: 0;
+
+            @if $enable-flex-full {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            } @else {
+                vertical-align: middle;
+            }
+        }
+
+        .custom-control-indicator {
+            position: static;
+            display: inline-block;
+            vertical-align: text-bottom;
+
+            @if $enable-flex-full {
+                margin-right: $form-check-input-margin-x; // Flexbox alignment means we lose our HTML space here, so we compensate.
+            }
         }
 
         // Re-override the feedback icon.
         .has-feedback .form-control-feedback {
             top: 0;
+        }
+    }
+}
+
+@if $enable-flex-opt {
+    .form-inline-flex {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+
+        .form-check {
+            width: 100%;
+        }
+
+        @include media-breakpoint-up(#{$form-inline-breakpoint}) {
+            label {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .form-group {
+                display: flex;
+                flex: 0 0 auto;
+                flex-flow: row wrap;
+                vertical-align: initial;
+            }
+
+            .input-group > .form-control {
+                width: auto;
+            }
+
+            .form-check {
+                display: flex;
+                vertical-align: initial;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .form-check-input {
+                margin-top: 0;
+                margin-right: $form-check-input-margin-x;
+            }
+
+            .custom-control {
+                display: flex;
+                vertical-align: initial;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .custom-control-indicator {
+                margin-right: .25rem; // Flexbox alignment means we lose our HTML space here, so we compensate.
+            }
         }
     }
 }
