v3 - Drop focus ring and go back to standard outline

--- a/scss/component/_button-group.scss
+++ b/scss/component/_button-group.scss
@@ -30,7 +30,8 @@
         &:hover {
             z-index: 2;
         }
-        &:focus {
+        &:focus,
+        &.focus {
             z-index: 3;
         }
     }
@@ -129,10 +130,10 @@
 }
 
 // On active and open, don't show outline
-.btn-group .dropdown-toggle:active,
-.btn-group.open .dropdown-toggle {
-    outline: 0;
-}
+//.btn-group .dropdown-toggle:active,
+//.btn-group.open .dropdown-toggle {
+//    outline: 0;
+//}
 
 
 // Sizing
