--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -51,7 +51,6 @@ $enable-print-styles:   true !default;      // true
 $enable-palette:        true !default;      // true
 $enable-sizing:         true !default;      // true
 $enable-bp-smallest:    false !default;     // false
-$enable-focus-ring:     true !default;      // true
 $enable-flex-full:      false !default;     // false -- all-in flex mode
 $enable-flex-opt:       true !default;      // true -- opt-in via class mode
 
@@ -252,12 +251,6 @@ $link-decoration:       underline !default;
 $link-hover-color:      palette-context("primary", 850) !default;
 $link-hover-decoration: underline !default;
 
-// Focus Indicator
-// =====
-$focus-outline:         5px auto -webkit-focus-ring-color;
-$focus-outline-offset:  -2px !default;
-$focus-ring-shadow:     0 0 .125rem .1875rem rgba(palette-context("info", 400), .75) !default;
-
 // Cursors
 // =====
 $cursor-disabled:                not-allowed !default;
@@ -385,8 +378,8 @@ $transition-collapse-y: height .3s ease !default;
 $transition-collapse-x: width .3s ease !default;
 
 // Component transitions
-$btn-transition:        all .15s ease-in-out !default;
-$input-transition:      border-color ease-in-out .15s, box-shadow ease-in-out .15s !default;
+$btn-transition:        box-shadow .15s ease-in-out !default;
+$input-transition:      border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 $modal-transition:      transform .3s ease-out !default;
 
 
@@ -460,26 +453,27 @@ $table-border-color:        $uibase-300 !default;
 // Buttons
 // =====
 // For each button variant, define text, background and border color.
-$btn-padding-y:                 .375rem !default;
-$btn-padding-x:                 .75rem !default;
-$btn-line-height:               1.25 !default;
-$btn-font-weight:               $font-weight-normal !default;
-$btn-box-shadow:                inset 0 .0625rem 0 rgba(255,255,255,.15);
-$btn-active-box-shadow:         inset 0 .2rem .3rem rgba(0,0,0,.125) !default;
+$btn-padding-y:             .375rem !default;
+$btn-padding-x:             .75rem !default;
+$btn-line-height:           1.25 !default;
+$btn-font-weight:           $font-weight-normal !default;
+$btn-box-shadow:            inset 0 .125rem .25rem rgba(255,255,255,.25);
+$btn-focus-box-shadow:      0 0 0 2px rgba(palette-context("primary", 300), .75) !default; // px because simulating outline
+$btn-active-box-shadow:     inset 0 .125rem .25rem rgba(0,0,0,.25) !default;
 
-$btn-default-color:             $uibase-500 !default;
-$btn-default-bg:                $white !default;
-$btn-default-border:            $uibase-500 !default;
-$btn-default-hover-color:       $uibase-600 !default;
-$btn-default-hover-bg:          $uibase-75 !default;
-$btn-default-hover-border:      $uibase-700 !default;
+$btn-default-color:         $uibase-500 !default;
+$btn-default-bg:            $white !default;
+$btn-default-border:        $uibase-500 !default;
+$btn-default-hover-color:   $uibase-600 !default;
+$btn-default-hover-bg:      $uibase-75 !default;
+$btn-default-hover-border:  $uibase-700 !default;
 
-$btn-disabled-opacity:          .6 !default;
+$btn-disabled-opacity:      .6 !default;
 
-$btn-block-spacing-y:           .3rem !default;
+$btn-block-spacing-y:       .3rem !default;
 
 // Allows for customizing button radius independently from global border radius
-$btn-border-radius:             $border-radius !default;
+$btn-border-radius:         $border-radius !default;
 
 
 // Forms
@@ -502,7 +496,7 @@ $input-box-shadow:              inset 0 .125rem .125rem rgba(0,0,0,.1) !default;
 
 $input-focus-color:             $input-color !default;
 $input-focus-bg:                $input-bg !default;
-$input-focus-border:            palette-context("primary", 275) !default;
+$input-focus-border:            palette-context("info", 300) !default;
 $input-focus-box-shadow:        inset 0 .125rem .125rem rgba(0,0,0,.15) !default;
 
 $input-disabled-color:          $disabled-color !default;
