v3 - Pagination flexbox support

--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -101,6 +101,12 @@
     }
 }
 
+// Pagination
+.cf-example .pagination {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
+
 // Utilities
 .cf-example > [class*="bg-"]:not(.navbar),
 .cf-example .d-table-cell {
