--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -311,9 +311,10 @@ h4 {
     border-left-width: .5rem;
     border-radius: $border-radius;
 
-    h4 {
+    .h3, .h4, .h5, .h6 {
         margin-top: 0;
         margin-bottom: .5rem;
+        font-size: 1.25rem;
     }
 
     p:last-child,
@@ -331,8 +332,7 @@ h4 {
     background-color: $bg;
     border-color: $border;
 
-    h4 {
-        // color: darken($color, 5%);
+    .h3, .h4, .h5, .h6 {
         color: $color;
     }
 
