--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -82,7 +82,6 @@
         text-decoration: none;
         background-color: $dropdown-link-hover-bg;
         outline: 0;
-        box-shadow: none;  // remove focus ring
     }
 
     &.disabled {
@@ -132,10 +131,8 @@
     > .dropdown-menu {
         display: block;
     }
-    // Remove focus ring and reverse toggle caret
+    // Reverse toggle caret
     .dropdown-toggle {
-        box-shadow: none;
-
         &::after {
             border-top: 0;
             border-bottom: $caret-width solid;
@@ -151,10 +148,9 @@
         }
     }
 
-    // Remove the focus ring when :focus is triggered
+    // Remove the outline when :focus is triggered
     > a {
         outline: 0;
-        box-shadow: none;
     }
 }
 
