simplify yet extend the spacer vars

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -269,7 +269,7 @@ h4 {
 .cf-content > table:not(.table) {
     width: 100%;
     max-width: 100%;
-    margin-bottom: $spacer;
+    margin-bottom: 1rem;
     border: $table-border-width solid $table-border-color;
 
     th,
