--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -154,32 +154,30 @@ $inverse-color: (
 // =====
 // Control the default spacing of most elements by modifying these variables.
 $spacer:   1rem !default;
-$spacer-x: $spacer !default;
-$spacer-y: $spacer !default;
 $spacers: (
     "0": (
         x: 0,
         y: 0
     ),
     "0_25": (
-        x: ($spacer-x * .25),
-        y: ($spacer-y * .25)
+        x: ($spacer * .25),
+        y: ($spacer * .25)
     ),
     "0_5": (
-        x: ($spacer-x * .5),
-        y: ($spacer-y * .5)
+        x: ($spacer * .5),
+        y: ($spacer * .5)
     ),
     "1": (
-        x: $spacer-x,
-        y: $spacer-y
+        x: $spacer,
+        y: $spacer
     ),
     "1_5": (
-        x: ($spacer-x * 1.5),
-        y: ($spacer-y * 1.5)
+        x: ($spacer * 1.5),
+        y: ($spacer * 1.5)
     ),
     "2": (
-        x: ($spacer-x * 2),
-        y: ($spacer-y * 2)
+        x: ($spacer * 2),
+        y: ($spacer * 2)
     )
 ) !default;
 
@@ -300,6 +298,7 @@ $abbr-border-color: $uibase-400 !default;
 $mark-padding-x:    .25rem !default;
 $mark-bg:           #ff0 !default;
 
+$hr-spacer-y:       1rem !default;
 $hr-border-color:   rgba(0,0,0,.1) !default;
 $hr-border-width:   $border-width !default;
 
@@ -422,6 +421,7 @@ $pre-color:                 $uibase-700 !default;
 
 // Figures
 // =====
+$figure-spacer-y:           .5rem !default;
 $figure-caption-font-size:  87.5% !default;
 $figure-caption-color:      $uibase-500 !default;
 
@@ -595,7 +595,8 @@ $custom-file-text: (
 
 // Progress bars
 // =====
-$progress-height:           $spacer-y !default;
+$progress-height:           1rem !default;
+$progress-spacer-y:         1rem !default;
 $progress-bg:               $uibase-50 !default;
 $progress-border-radius:    $border-radius !default;
 $progress-box-shadow:       inset 0 .1rem .1rem rgba(0,0,0,.1) !default;
@@ -627,6 +628,7 @@ $list-group-item-padding-x:         1rem !default;
 
 // Breadcrumbs
 // =====
+$breadcrumb-spacer-y:           1rem !default;
 $breadcrumb-padding-y:          .75rem !default;
 $breadcrumb-padding-x:          1rem !default;
 $breadcrumb-item-padding:       .5rem !default;
@@ -679,7 +681,7 @@ $dropdown-border-width:         $border-width !default;
 $dropdown-border-radius:        $border-radius !default;
 $dropdown-divider-width:        $border-width !default;
 $dropdown-divider-color:        $uibase-200 !default;
-$dropdown-divider-spacer:       ($spacer-y / 2) !default;
+$dropdown-divider-spacer:       ($spacer / 2) !default;
 $dropdown-box-shadow:           0 .2rem .3rem rgba(0,0,0,.175) !default;
 
 // Border radius where menu/submenu aligns or 'attaches' to control item.
@@ -807,7 +809,7 @@ $badge-outline-link-hover-color: $white !default;
 // =====
 $alert-padding-x:           1rem !default;
 $alert-padding-y:           1rem !default;
-$alert-margin-bottom:       $spacer-y !default;
+$alert-margin-bottom:       $spacer !default;
 $alert-border-radius:       $border-radius !default;
 $alert-link-font-weight:    $font-weight-bold !default;
 $alert-border-width:        $border-width !default;
