--- a/scss/component/_breadcrumb.scss
+++ b/scss/component/_breadcrumb.scss
@@ -1,6 +1,6 @@
 .breadcrumb {
     padding: $breadcrumb-padding-y $breadcrumb-padding-x;
-    margin-bottom: $spacer-y;
+    margin-bottom: $breadcrumb-spacer-y;
     list-style: none;
     background-color: $breadcrumb-bg;
     @include border-radius($breadcrumb-border-radius);
