--- a/scss/utilities/_display.scss
+++ b/scss/utilities/_display.scss
@@ -15,3 +15,48 @@
         .d#{$bprule}-table-cell { display: table-cell !important; }
     }
 }
+
+// Print display utilities
+.print-show-block {
+    @media print {
+        display: block !important;
+    }
+}
+.print-show-inline {
+    @media print {
+        display: inline !important;
+    }
+}
+.print-show-inline-block {
+    @media print {
+        display: inline-block !important;
+    }
+}
+
+.print-only-block {
+    display: none !important;
+
+    @media print {
+        display: block !important;
+    }
+}
+.print-only-inline {
+    display: none !important;
+
+    @media print {
+        display: inline !important;
+    }
+}
+.print-only-inline-block {
+    display: none !important;
+
+    @media print {
+        display: inline-block !important;
+    }
+}
+
+.print-hide {
+    @media print {
+        display: none !important;
+    }
+}
