Add `d-*-down-none` utils

--- a/scss/utilities/_display.scss
+++ b/scss/utilities/_display.scss
@@ -1,10 +1,10 @@
 // scss-lint:disable ImportantRule
 
 // Display utilities
-@each $breakpoint in map-keys($grid-breakpoints) {
-    $bprule: breakpoint-designator($breakpoint);
+@each $bp in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($bp);
 
-    @include media-breakpoint-up($breakpoint) {
+    @include media-breakpoint-up($bp) {
         .d#{$bprule}-none { display: none !important; }
         .d#{$bprule}-block { display: block !important; }
         .d#{$bprule}-flex { display: flex !important; }
@@ -13,6 +13,15 @@
         .d#{$bprule}-inline-flex { display: inline-flex !important; }
         .d#{$bprule}-table { display: table !important; }
         .d#{$bprule}-table-cell { display: table-cell !important; }
+    }
+
+    // Skip largest breakpoint for down (equivalent to `.d-none`)
+    @if breakpoint-max($bp, $grid-breakpoints) != null {
+        .d-#{$bp}-down-none {
+            @include media-breakpoint-down($bp) {
+                display: none !important;
+            }
+        }
     }
 }
 
