--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -2,13 +2,13 @@
     <div class="container">
         <nav>
             <a class="navbar-brand" href="{{ site.baseurl }}/">CAST Figuration</a>
-            <div class="hide-lg-up float-right">
+            <div class="d-lg-none float-right">
                 <button class="navbar-toggler btn btn-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#cf-topnav" data-cfw-collapse-hidden="false" aria-label="Toggle navigation">
                     <span class="icon-menu" aria-hidden="true">&#8801;</span>
                 </button>
             </div>
             {% if site.github %}
-            <div class="hide-xs-down float-right mt-0_25 mr-1 mr-lg-0">
+            <div class="d-sm-down-none float-right mt-0_25 mr-1 mr-lg-0">
                 <form class="form-inline docsearch-wrapper">
                     <input type="search" class="docsearch form-control form-control-sm" id="docsearch" placeholder="Search docs..." aria-label="Search the documentation" />
                 </form>
