--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -595,13 +595,15 @@ $custom-file-text: (
 
 // Progress bars
 // =====
-$progress-height:           1rem !default;
-$progress-spacer-y:         1rem !default;
-$progress-bg:               $uibase-50 !default;
-$progress-border-radius:    $border-radius !default;
-$progress-box-shadow:       inset 0 .1rem .1rem rgba(0,0,0,.1) !default;
-
-$progress-bar-bg:           $uibase-400 !default;
+$progress-height:               1rem !default;
+$progress-font-size:            .75rem !default;
+$progress-bg:                   $uibase-50 !default;
+$progress-border-radius:        $border-radius !default;
+$progress-box-shadow:           inset 0 .125rem .125rem rgba(0,0,0,.1) !default;
+$progress-bar-color:            $white !default;
+$progress-bar-bg:               map-get($context-colors, "primary") !default;
+$progress-bar-animation-timing: 1s linear infinite !default;
+$progress-bar-box-shadow:       inset 0 -.125rem 0 rgba(0,0,0,.1) !default;
 
 
 // List group
