--- a/scss/component/_progress.scss
+++ b/scss/component/_progress.scss
@@ -1,88 +1,62 @@
-// Basic progress bar
+@keyframes progress-bar-stripes {
+    from { background-position: $progress-height 0; }
+    to { background-position: 0 0; }
+}
+
 .progress {
-    display: block;
-    width: 100%;
-    height: $progress-height;
-    margin-bottom: $progress-spacer-y;
-    // Force rounded corners by use of cropping
-    overflow: hidden;
-    // Set overall background
+    overflow: hidden; // Force rounded corners by cropping
+    font-size: $progress-font-size;
+    line-height: 0;  // Allow bar to control min-height
     background-color: $progress-bg;
-    // Remove Firefox and Opera border
-    border: 0;
-    // Reset the default appearance
-    appearance: none;
     @include border-radius($progress-border-radius);
     @include box-shadow($progress-box-shadow);
-}
-.progress[value] {
-    // Set overall background
-    background-color: $progress-bg;
-    // Remove Firefox and Opera border
-    border: 0;
-    // Reset the default appearance
-    appearance: none;
-    // Set overall border radius
-    @include border-radius($progress-border-radius);
-}
 
-// Filled-in portion of the bar
-.progress[value]::-ms-fill {
-    background-color: $progress-bar-bg;
-    // Remove right-hand border of value bar from IE10+/Edge
-    border: 0;
-}
-.progress[value]::-moz-progress-bar {
-    background-color: $progress-bar-bg;
-}
-.progress[value]::-webkit-progress-value {
-    background-color: $progress-bar-bg;
-}
-
-// Unfilled portion of the bar
-.progress[value]::-webkit-progress-bar {
-    background-color: $progress-bg;
-    @include box-shadow($progress-box-shadow);
-}
-base::-moz-progress-bar, // Absurd-but-syntactically-valid selector to make these styles Firefox-only
-.progress[value] {
-    background-color: $progress-bg;
-    @include box-shadow($progress-box-shadow);
-}
-
-// IE9
-.progress-bar {
-    display: inline-block;
-    height: $progress-height;
-    text-indent: -999rem; // Simulate hiding of value as in native `<progress>`
-    vertical-align: top;
-    background-color: $progress-bar-bg;
-}
-
-// Striped
-.progress-striped[value]::-webkit-progress-value {
-    @include gradient-striped();
-    background-size: $progress-height $progress-height;
-}
-.progress-striped[value]::-moz-progress-bar {
-    @include gradient-striped();
-    background-size: $progress-height $progress-height;
-}
-.progress-striped[value]::-ms-fill {
-    @include gradient-striped();
-    background-size: $progress-height $progress-height;
-}
-// IE9
-.progress-striped .progress-bar {
-    @include gradient-striped();
-    background-size: $progress-height $progress-height;
-}
-
-// Context variations
-@each $theme, $colors in $context-themes {
-    $bg: map-get($colors, "control-bg");
-
-    .progress-#{$theme} {
-        @include progress-variant($bg);
+    @if $enable-flex-full {
+        display: flex;
+    } @else {
+        display: block;
+        width: 100%;
     }
+}
+
+@if $enable-flex-opt {
+    .progress-flex {
+        display: flex;
+        width: initial;
+    }
+}
+
+.progress-bar {
+    height: $progress-height;
+    line-height: $progress-height;
+    color: $progress-bar-color;
+    text-align: center;
+    background-color: $progress-bar-bg;
+    @include box-shadow($progress-bar-box-shadow);
+
+    @if not $enable-flex-full {
+        display: inline-block;
+        float: left;
+        vertical-align: top;
+    }
+}
+
+@if $enable-flex-opt {
+    .progress-flex {
+        .progress-bar {
+            display: initial;
+            // Leave out for IE 9 stacked bars?
+            //float: none;
+            vertical-align: initial;
+        }
+    }
+}
+
+.progress-bar-striped {
+    @include gradient-striped();
+    background-size: $progress-height $progress-height;
+}
+
+.progress-bar-animated {
+    animation: progress-bar-stripes $progress-bar-animation-timing;
 }
