--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -751,7 +751,12 @@ h4 > code {
   margin-bottom: .5rem;
 }
 
-.cf-example > [class*="bg-"]:not(.navbar),
+.cf-example > .progress + .progress,
+.cf-example > .progress + .btn {
+  margin-top: 1rem;
+}
+
+.cf-example > [class*="bg-"]:not(.navbar):not(.progress),
 .cf-example .d-table-cell {
   padding: .5rem;
   margin-top: .5rem;
