--- a/scss/component/_button-group.scss
+++ b/scss/component/_button-group.scss
@@ -75,7 +75,17 @@
     }
 
     .input-group {
-        width: auto;
+        width: 1%;
+
+        .form-control {
+            width: auto;
+        }
+    }
+
+    @if $enable-flex-opt {
+        .input-group-flex {
+            width: auto;
+        }
     }
 }
 
